# Linux-System-Programming-Techniques-Concepts

./: Makefile.am  Makefile.in  compile_commands.json  configure  configure.ac
assignment1/: Makefile.in
assignment1/autom4te.cache/: output.1  output.2  requests  traces.1
assignment1/collections/: configure
assignment1/collections/autom4te.cache/: requests
assignment1/collections/src/: bt.h  defines.h  diff.h  dll.h
assignment1/collections/tests/: Makefile.am  ll_suite.c
assignment2/: Makefile.in  configure  configure.ac
assignment2/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
assignment2/src/: Makefile.am  Makefile.in  exercise1.c  exercise2q.c
assignment3/: Makefile.am  Makefile.in  configure  configure.ac
assignment3/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
assignment3/collections/autom4te.cache/: requests  traces.0  traces.1  traces.2
assignment3/glcollections/: Makefile.in  configure  configure.ac
assignment3/glcollections/autom4te.cache/: output.1  requests  traces.1
assignment3/glcollections/src/: Makefile.am  Makefile.in  container.h  gldll.c  gldll.h  offset_of.h
assignment3/glcollections/tests/: Makefile.am  Makefile.in  check_glcollections.c  emp.c  emp.h  gldll_suite.c  gldll_suite.h
assignment3/src/: Makefile.am  Makefile.in  emp.c  emp.h  exercise1.c
assignment4/src/: bitsop.c  bitsop.h
assignment5/: Makefile.in  config.h.in~  configure  configure.ac
assignment5/autom4te.cache/: output.1  requests  traces.1
assignment5/src/: Makefile.am  Makefile.in  bitmap.c  bitmap.h  bitsop.c
assignment5/tests/: Makefile.am  Makefile.in  bitmap_suite.c  bitmap_suite.h  check_assignment5.c
assignment6/: configure  configure.ac
assignment6/autom4te.cache/: output.2  requests  traces.1
assignment6/src/: Makefile.am  Makefile.in  serialize.c  serialize.h
assignment6/tests/: Makefile.am  Makefile.in  check_assignment6.c  serialize_suite.c  serialize_suite.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
collections/: Makefile.in
collections/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
collections/src/: Makefile.in  bt.c  bt.h  diff.c  dll.c  dll.h  ll.h
collections/tests/: bt_suite.c  check_collections.c  dll_suite.c  ll_suite.c  ll_suite.h
src/: Makefile.am  Makefile.in  student.c  student.h
task1/: Makefile.am  configure  configure.ac
task1/autom4te.cache/: output.0  requests
task1/collections/: Makefile.in  configure.ac
task1/src/: evaluation.c
(+12 files in other folders)
