AC_INIT([LinuxSystemProgrammingAssignment1], [0.0], [zus AT gomoreno.me])
AM_PROG_AR
AC_CONFIG_SRCDIR([src/evaluation.c])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
LT_INIT
AC_PROG_CC
AC_PROG_LIBTOOL
AM_PROG_CC_C_O
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])
AC_FUNC_MALLOC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_SUBDIRS([collections])
AC_OUTPUT
