AC_PREREQ([2.59])
AC_INIT([GlCollectionsLibrary], [0.0], [zus AT gomoreno.me])
AM_PROG_AR
AC_CONFIG_SRCDIR([src/gldll.c])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
LT_INIT
AC_PROG_CC
AC_PROG_LIBTOOL
PKG_CHECK_MODULES([CHECK], [check >= 0.9.6])
AM_PROG_CC_C_O
AC_HEADER_STDC
AC_HEADER_STDBOOL
AC_CHECK_HEADERS([stdlib.h])
AC_FUNC_MALLOC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
