TESTS = check_assignment5
check_PROGRAMS = check_assignment5
check_assignment5_SOURCES = check_assignment5.c\
														bitmap_suite.c bitmap_suite.h
check_assignment5_CPPFLAGS = -I$(top_srcdir)/src
check_assignment5_CFLAGS = @CHECK_CFLAGS@
check_assignment5_LDADD = $(top_builddir)/src/libbitmap.la @CHECK_LIBS@
