TESTS = check_assignment6
check_PROGRAMS = check_assignment6
check_assignment6_SOURCES = check_assignment6.c\
														serialize_suite.c serialize_suite.h
check_assignment6_CPPFLAGS = -I$(top_srcdir)/src
check_assignment6_CFLAGS = @CHECK_CFLAGS@
check_assignment6_LDADD = $(top_builddir)/src/libserialize.la @CHECK_LIBS@
